# ResourceWrapper

./: README.md  meson.build
src/: lib.cpp  lib.def  main.cpp  meson.build  plugin.cpp  plugin.hpp
src/hook/: hook.cpp  hook.hpp  meson.build  pe.cpp  pe.hpp
src/plugins/: meson.build
src/plugins/flac/: convert.cpp  convert.hpp  meson.build  plugin.cpp
src/plugins/webp/: convert.cpp  convert.hpp  meson.build  plugin.cpp
